react-vite/src/components/Navigation/Navigation.css
/* .profile-dropdown {
  position: absolute;
} */

.hidden {
  display: none;
}

#nav-logo {
  width: 100px;
}

#navbar-left {
  display: flex;
  justify-content: center;
  padding: 10px;
  align-items: center;
}

#navbar-right {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  align-items: center;
}

#nav-links-contain {
  display: flex;
  align-items: center;
}

#create-spot-link {
  display: inline-block;
  margin-right: 20px;
}

#navlink-right {
  margin-right: 8px;
  text-decoration: none;
}

#navbar-full {
  display: flex;
  list-style-type: none;
  padding: 5px;
  border-bottom: 2px #f1ed2a solid;
  background-color:#6239ad;
  margin: 0%;
  justify-content: center;
}

#navbar-full > div {
  width: 100%;
  display: flex;
  max-width: 1080px;
  justify-content: space-between;
  align-items: center;
}

.profile-dropdown {
  list-style-type: none;
  position: relative;
}

#popup {
  position: absolute;
  border: black solid 2px;
  border-radius: 5px;
  right: 0;
  top: 5px;
  padding: 8px;
  display: flex;
  flex-direction: column;
  background-color: rgb(246, 247, 248);
  width: 100px;
}

#popup>*:first-child {
  margin-bottom: 8px;
}

#profile-popup {
  position: absolute;
  border: black solid 2px;
  border-radius: 5px;
  right: 0;
  top: 5px;
  padding: 4px;
  display: flex;
  flex-direction: column;
  background-color: rgb(246, 247, 248);
  justify-content: center;
}

#profile-popup>*:nth-last-child(n + 2) {
  margin-bottom: 8px;
  border-bottom: 1px solid black;
}

#profile-popup>*:last-child {
  align-self: center;
}

#profile-popup button {
  background-color: silver;
  align-self: center;
}

#prof-but {
  border-radius: 20px;
  height: 30px;
  position: static;
  display: inline-block;
  width: 50px;
}

#nav-link {
  text-decoration: none;
  cursor: pointer;
}

#prof-button {
  display: flex;
  align-items: center;
}

#prof-button>* {
  margin-right: 8px;
}

#profile-dropdown:hover, #logout:hover, #prof-but:hover, #popup>*:hover {
  cursor: pointer;
}

